--- a/client/css/main.css
+++ b/client/css/main.css
@@ -28,11 +28,40 @@
   align-items: center;
   justify-content: center;
   border-bottom: 2px solid #000;
+  position: relative;
+}
+
+.main__title::before {
+  content: '';
+  display: block;
+  position: absolute;
+  left: 15px;
+  top: 65px;
+  width: 128px;
+  height: 88px;
+  background-image: url('../picture/eagle_mini1.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  z-index: 10;
+}
+
+.main__title::after {
+  content: '';
+  display: block;
+  position: absolute;
+  right: 25px;
+  top: 58px;
+  width: 90px;
+  height: 88px;
+  background-image: url('../picture/mini.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  z-index: 10;
 }
 
 .title__form {
   display: block;
-  margin-bottom: 30px;
+  margin-bottom: 50px;
   font-size: 30px;
   line-height: 38px;
   display: flex;
@@ -94,7 +123,8 @@ button.btn{
   font-size: 20px;
   line-height: 25px;
   margin: 0;
-  border:1px solid #000;
+  border: 2px solid #000080;
+  background-color: #fff;
   border-radius: 10px;
 }
 
@@ -105,8 +135,8 @@ button.btn{
   font-size: 20px;
   line-height: 25px;
   margin: 0;
-  border:1px solid #000;
-  background-color: #7FFFD4;
+  border: 2px solid #000080;
+  background-color: #fff;
   border-radius: 10px;
 }
 
@@ -121,20 +151,9 @@ button.btn{
   margin-bottom: 30px;
 }
 
-.btn__add {
-  background-color: #FDD9B5;
-}
-
-.btn__remove {
+button.btn__hide {
   background-color: #E32636;
-}
-
-.btn__check  {
-  background-color: #ADFF2F;
-}
-
-.btn__hide {
-  background-color: #D76E00;
+  color: #fff;
 }
 
 .btn__interface-group--one,
