--- a/client/css/modal.css
+++ b/client/css/modal.css
@@ -26,18 +26,6 @@
 }
 
 
-.is-active {
-  overflow: visible;
-  opacity: 1;
-  z-index: 10;
-}
-
-.no-active {
-  overflow: hiden;
-  opacity: 0;
-  z-index: -10;
-}
-
 .modal__container {
   width: 100%;
   height: 100%;
@@ -80,11 +68,30 @@
   transform: rotate(-45deg);
 }
 
-.modal__modalWrapper {
+.form__container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  gap: 10px;
+}
+
+.form__item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  gap: 20px;
+}
+
+.form__item-title {
+  font-size: 25px;
+  line-height: 32px;
+}
+
+.form__item-input {
+  display: block;
+  padding: 10px 15px;
 }
 
 .modal__text {
