--- a/client/css/style.css
+++ b/client/css/style.css
@@ -86,7 +86,10 @@ iframe {
 
 .wrapper {
   width: 800px;
-  
+  padding: 10px;
+  border: 3px solid #000080;
+  border-radius: 10px;
+  background-color: #00BFFF;
 }
 
 
@@ -115,4 +118,15 @@ iframe {
   margin-bottom: 20px;
   font-size: 20px;
   line-height: 30px;
+}
+
+.file__btn {
+  padding: 5px 5px;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 19px;
+  margin: 0;
+  border: 2px solid #000080;
+  background-color: #fff;
+  border-radius: 10px;
 }
